# autotrader-backend

./: .env.example  .env.test  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  project_structure.sh  prometheus.yml  pyproject.toml  requirements.txt  technicaldesign.md
migrations/: env.py
migrations/versions/: 20241101_1355_2f0ac14a2384_initial.py  20241101_1357_86643eb0ac9d_initial_schema.py
scripts/: check_imports.py  generate_docs.py  init_db.py
src/: __init__.py  main.py
src/api/v1/: router.py
src/api/v1/endpoints/: __init__.py  market_data.py  risk.py  strategy.py  trading.py
src/core/: config.py  logging.py  middleware.py  telemetry.py
src/db/: base.py  session.py
src/db/models/: __init__.py  market_data.py  trading.py
src/schemas/: market_data.py  trading.py
src/services/: data_ingestion.py  monitoring.py  risk_manager.py  strategy.py  trade_executor.py
src/utils/: clickhouse_client.py  redis_client.py
tests/: conftest.py
tests/test_api/: test_market_data.py
